[gd_scene load_steps=17 format=2]

[ext_resource path="res://Traps/Platforms/MovingPlatform.gd" type="Script" id=1]
[ext_resource path="res://Assets/Traps/Platforms/Grey On (32x8).png" type="Texture" id=2]
[ext_resource path="res://Assets/Traps/Platforms/Grey Off.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 8 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 8 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 32, 8 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 32, 8 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 32, 8 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 160, 0, 32, 8 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 32, 8 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 224, 0, 32, 8 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "On",
"speed": 20.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": false,
"name": "Off",
"speed": 20.0
} ]

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 15, 3 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 2, 2 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 2, 2 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 2, 2 )

[node name="IronPlatform" type="Node2D"]
script = ExtResource( 1 )

[node name="Platform" type="KinematicBody2D" parent="."]
collision_layer = 32
motion/sync_to_physics = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="Platform"]
frames = SubResource( 9 )
animation = "Off"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform"]
visible = false
position = Vector2( 0, 1 )
shape = SubResource( 10 )
one_way_collision = true

[node name="Trigger" type="Area2D" parent="Platform"]
visible = false
collision_layer = 16
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform/Trigger"]
shape = SubResource( 11 )

[node name="MoveTween" type="Tween" parent="."]
repeat = true
playback_process_mode = 0
playback/repeat = true

[node name="StartTrigger" type="Area2D" parent="."]
visible = false
collision_layer = 16
collision_mask = 16

[node name="Start" type="CollisionShape2D" parent="StartTrigger"]
shape = SubResource( 12 )

[node name="EndTrigger" type="Area2D" parent="."]
visible = false
collision_layer = 16
collision_mask = 16

[node name="End" type="CollisionShape2D" parent="EndTrigger"]
shape = SubResource( 13 )
[connection signal="area_entered" from="StartTrigger" to="." method="_on_Trigger_area_entered"]
[connection signal="area_exited" from="StartTrigger" to="." method="_on_StartTrigger_area_exited"]
[connection signal="area_entered" from="EndTrigger" to="." method="_on_Trigger_area_entered"]
[connection signal="area_exited" from="EndTrigger" to="." method="_on_EndTrigger_area_exited"]
